fixed alignment issue for bottom picture and scrolling text with button

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
 body {
     text-align: center;
+    
 }
 
 header {
     background-color: grey;
+    margin-bottom: 15px;
 }
 
+/* ALL IMAGES */
+img {
+    margin: 15px;
+}
+
+/* NAV BAR */
 li{
     margin: 35px;
     display: inline-block;
@@ -13,35 +21,18 @@ li{
 }
 
  
-img {
-    margin: 15px;
-}
-
 li>img {
     margin: 0px;
 }
 
-#next-to-scroll-text {
-    float: left;
-    margin-left: 125px;
-    padding: 15px;
-}
-
-section>p {
-    overflow: scroll;
-    height: 350px;
-    text-align: left;
-    float: left;
-    width: 460px;
-    margin-top: 30px;
-}
-
+/* FOOTER */
 footer {
     background-color: gray;
-    height: 100px;
-    clear: both;
+    height: 200px;
+    /* clear: both; */
 }
 
+/* BUTTON */
 button {
     clear: both;
     margin: 2.4em;
@@ -49,7 +40,7 @@ button {
     border: none;
     color: black;
     padding: 16px 32px;
-    text-align: center;
+    
     font-size: 16px;
     margin: 4px 2px;
     transition: 350ms;
@@ -59,3 +50,28 @@ button:hover {
   background-color: blue;
   color: white;
 }
+
+/* BOTTOM PIC WITH TEXT AND BUTTON NEXT TO IT */
+
+
+
+#text{
+    height: 350px;
+    overflow: scroll;
+    width: 420px;
+    text-align: left;
+    
+}
+   
+.test {
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: 15px;
+    text-align: left;
+
+}
+
+
+
+
+
